Added files via upload

--- a/bios.html
+++ b/bios.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <body>
 
 <center>
-We haven't lived yet
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="bios.html">About Us</a></li>
+  <li><a target="_blank" href="RequirementsDocument.pdf">Requirements</a></li>
+  <li><a href="">Design</a></li>
+  <li><a href="">Implementation</a></li>
+</ul>
+
+
+<container id="rcorners2">
+<h2>Amy Puente</h2>
+<p></p>
+</container>
+
+<container id="rcorners2">
+<h2> Brian Burns</h2>
+<p></p>
+
+</container>
+
+<container id="rcorners2">
+<h2>Amy Chockley</h2>
+<p>Major: Computer Science & Psychology</p>
+<p>Graduation: May 2016</p>
+</container>
+
+
 </center>
 
 </body>
