--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
 
 <center>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="bios.html">About Us</a></li>
+  <li><a target="_blank" href="RequirementsDocument.pdf">Requirements</a></li>
+  <li><a href="">Design</a></li>
+  <li><a href="">Implementation</a></li>
+</ul>
 
-<h1> Police Recording Application for Android</h1>
+<h1>Bystander</h1>
+<h2>A Police Recording Application for Android</h2>
 
-<p>Amy Chockley, Amy Puente, Brian Burns</p>
 
 <p>This Police Recording application will allow users to create audio and video recordings and upload them to a remote location, using a broadcast style of upload. The PRA will also feature a section outlining the legal rights a person possesses when making audio and video recordings of 3rd parties in public and private locations. The PRA will provide an easy to use interface and will offer users a robust and simple way to create and ensure the preservation of their recordings, while also supplying them with a clear overview of their legal rights.</p>
 
-<a href="deliverables.html">
-    Deliverables
-</a>
 
-<br>
-
-<a href="bios.html">
-    About Our Team
-</a>
 
 </center>
 
