Prettied the site and added bio

--- a/index.html
+++ b/index.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-<center>
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="bios.html">About Us</a></li>
-  <li><a target="_blank" href="RequirementsDocument.pdf">Requirements</a></li>
-  <li><a href="">Design</a></li>
-  <li><a href="">Implementation</a></li>
-</ul>
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper indigo darken-3">
+      <ul class="left hide-on-med-and-down">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="bios.html">About Us</a></li>
+        <li><a href="RequirementsDocument.pdf">Requirements</a></li>
+        <li><a href="">Design</a></li>
+        <li><a href="">Implementation</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
 
+<center class="bios">
 <h1>Bystander</h1>
-<h2>A Police Recording Application for Android</h2>
+<div class="row">
+  <div class="col s24 m8">
+    <div class="card blue-grey darken-1 desc">
+      <div class="card-content white-text">
+        <span class="card-title">A Police Recording Application for Android</span>
+        <p>This Police Recording application will allow users to create audio and video recordings and upload them to a remote location, using a broadcast style of upload. The PRA will also feature a section outlining the legal rights a person possesses when making audio and video recordings of 3rd parties in public and private locations. The PRA will provide an easy to use interface and will offer users a robust and simple way to create and ensure the preservation of their recordings, while also supplying them with a clear overview of their legal rights.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <h2>A Police Recording Application for Android</h2>
 
 
-<p>This Police Recording application will allow users to create audio and video recordings and upload them to a remote location, using a broadcast style of upload. The PRA will also feature a section outlining the legal rights a person possesses when making audio and video recordings of 3rd parties in public and private locations. The PRA will provide an easy to use interface and will offer users a robust and simple way to create and ensure the preservation of their recordings, while also supplying them with a clear overview of their legal rights.</p>
-
-
-
+<p>This Police Recording application will allow users to create audio and video recordings and upload them to a remote location, using a broadcast style of upload. The PRA will also feature a section outlining the legal rights a person possesses when making audio and video recordings of 3rd parties in public and private locations. The PRA will provide an easy to use interface and will offer users a robust and simple way to create and ensure the preservation of their recordings, while also supplying them with a clear overview of their legal rights.</p> -->
 </center>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
