--- a/bios.html
+++ b/bios.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper indigo darken-3">
+      <ul class="left hide-on-med-and-down">
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="bios.html">About Us</a></li>
+        <li><a href="RequirementsDocument.pdf">Requirements</a></li>
+        <li><a href="">Design</a></li>
+        <li><a href="">Implementation</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <center>
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="bios.html">About Us</a></li>
-  <li><a target="_blank" href="RequirementsDocument.pdf">Requirements</a></li>
-  <li><a href="">Design</a></li>
-  <li><a href="">Implementation</a></li>
-</ul>
-
-
-<container id="rcorners2">
-<h2>Amy Puente</h2>
-<p></p>
-</container>
-
-<container id="rcorners2">
-<h2> Brian Burns</h2>
-<p></p>
-
-</container>
-
-<container id="rcorners2">
-<h2>Amy Chockley</h2>
-<p>Major: Computer Science & Psychology</p>
-<p>Graduation: May 2016</p>
-</container>
-
-
+<div class="container">
+<div class="row">
+  <div class="col s12 cards-container bios">
+     <div class="card blue-grey darken-1">
+       <div class="card-content white-text">
+         <span class="card-title">Amy Puente</span>
+         <p>bio here</p>
+       </div>
+      </div>
+     <div class="card blue-grey darken-1">
+       <div class="card-content white-text">
+         <span class="card-title">Brian Burns</span>
+         <p>Major: Computer Science & Mathematics</p>
+         <br>
+         <p>Graduation: May 2017</p>
+       </div>
+      </div>
+     <div class="card blue-grey darken-1">
+       <div class="card-content white-text">
+         <span class="card-title">Amy Chockley</span>
+         <p>Major: Computer Science & Psychology</p>
+         <br>
+         <p>Graduation: May 2016</p>
+       </div>
+      </div>
+    </div>
+  </div>
+</div>
 </center>
-
 </body>
-
 </html>
