added bio description

--- a/bios.html
+++ b/bios.html
@@ -18,7 +18,7 @@
 
 <container id="rcorners2">
 <h2>Amy Puente</h2>
-<p></p>
+<p>Hi! I'm Amy Puente and am a senior Computer Science major from New Orlean, Louisiana.</p>
 </container>
 
 <container id="rcorners2">
